create github pages

--- a/news.html
+++ b/news.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -25,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="53">
+<section id="ext_menu-5a" data-rv-view="180">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website maker software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="178" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="55" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="182" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -80,7 +79,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7z" data-rv-view="57" style="padding-top: 0px; padding-bottom: 80px;">
+<section class="mbr-section" id="msg-box5-7z" data-rv-view="184" style="padding-top: 0px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -110,7 +109,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="189" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -120,7 +119,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="64" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="191" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -130,7 +129,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="60" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="187" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
@@ -141,13 +140,11 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
