--- a/menu.html
+++ b/menu.html
@@ -9,13 +9,12 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   <title>menu</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -23,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-1c" data-rv-view="1932" style="background-color: rgb(40, 50, 78); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-1c" data-rv-view="169" style="background-color: rgb(40, 50, 78); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -34,7 +33,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="1934" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="171" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -109,7 +108,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-86" data-rv-view="1937" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-86" data-rv-view="174" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -119,7 +118,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="1939" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="176" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
@@ -131,10 +130,8 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
