--- a/page21.html
+++ b/page21.html
@@ -9,16 +9,15 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Web Maker Description">
   <title>eyelash-1</title>
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -27,7 +26,7 @@
   
 </head>
 <body>
-<section id="ext_menu-7f" data-rv-view="1432">
+<section id="ext_menu-7f" data-rv-view="419">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -60,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="1430" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="415" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,7 +70,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-95" data-rv-view="1552" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-95" data-rv-view="417" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -82,7 +81,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery1-7h" data-rv-view="1436" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery1-7h" data-rv-view="423" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -224,7 +223,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7g" data-rv-view="1434" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7g" data-rv-view="421" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
@@ -235,10 +234,9 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
@@ -247,6 +245,5 @@
   <script src="assets/mobirise-gallery/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
