--- a/page6.html
+++ b/page6.html
@@ -9,14 +9,13 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   <title>5</title>
-  <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -24,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="77" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="208" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -35,7 +34,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="79" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="210" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -97,7 +96,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="82" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="213" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -113,10 +112,8 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
