--- a/products.html
+++ b/products.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -25,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-3a" data-rv-view="72">
+<section id="ext_menu-3a" data-rv-view="199">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="66" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="193" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,14 +68,14 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="68">
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="195">
     <div class="mbr-figure">
         <div><img src="assets/images/q1-1-1400x437.jpg"></div>
         
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="70" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="197" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -92,13 +91,11 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
