--- a/page9.html
+++ b/page9.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section" id="pricing-table2-1w" data-rv-view="149" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section" id="pricing-table2-1w" data-rv-view="360" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
 
     
 
@@ -94,7 +94,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
