create github pages

--- a/page28.html
+++ b/page28.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9s" data-rv-view="572" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-9s" data-rv-view="572" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -77,9 +77,14 @@
         <div class="row">
             <div class="mbr-table-md-up">
 
+              <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 43%;">
+                  <div class="mbr-figure"><img src="assets/images/s-45580368-1108x1478.jpg"></div>
+              </div>
+
               
 
-              <div class="mbr-table-cell col-md-5 text-xs-center text-md-right content-size">
+
+              <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
                   <h3 class="mbr-section-title display-2">🎉 &nbsp;休修臉 &nbsp;週年慶 活動 &nbsp; 🎉<div>&nbsp; &nbsp;9/27~10/25&nbsp;</div></h3>
                   <div class="lead">
 
@@ -92,11 +97,6 @@
 
 
               
-
-
-              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 43%;">
-                  <div class="mbr-figure"><img src="assets/images/s-45580368-1108x1478.jpg"></div>
-              </div>
 
             </div>
         </div>
