--- a/page19.html
+++ b/page19.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-6m" data-rv-view="363">
+<section id="ext_menu-6m" data-rv-view="260">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="365" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="262" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="367" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -78,7 +78,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="369" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="266" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="371" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="268" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -98,7 +98,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="373" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="270" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -108,7 +108,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="375" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="272" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -118,7 +118,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="377" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="274" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -128,7 +128,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="379" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="276" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -138,7 +138,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="381" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="278" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -148,7 +148,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="383" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="280" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -165,7 +165,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="385" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="282" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -175,7 +175,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="387" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="284" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -185,7 +185,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="389" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -195,7 +195,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="391" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -205,7 +205,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="393" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
