--- a/page6.html
+++ b/page6.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="303" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="85" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -34,7 +34,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="305" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="87" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -96,7 +96,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="308" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="90" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
