create github pages

--- a/page6.html
+++ b/page6.html
@@ -34,7 +34,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="87" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="87" style="background-color: rgb(239, 239, 239);">
 
     
 
