--- a/page9.html
+++ b/page9.html
@@ -50,7 +50,7 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">單次價$</span>
-                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/80min.</small>
+                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/75min.</small>
                           </div>
                           <small class="mbr-plan-price-desc"></small>
                       </div>
@@ -73,7 +73,7 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">單次價$</span>
-                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/80min.</small>
+                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/（目前停售）</small>
                           </div>
                           <small class="mbr-plan-price-desc"></small>
                       </div>
@@ -94,7 +94,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/d">web software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
