--- a/page7.html
+++ b/page7.html
@@ -52,7 +52,7 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">體驗價$</span>
-                            <span class="mbr-price-figure"><strong>999</strong></span><small class="mbr-price-term">/ 75min.</small>
+                            <span class="mbr-price-figure"><strong>999</strong></span><small class="mbr-price-term">/&nbsp;<br></small>
                           </div>
                           <small class="mbr-plan-price-desc">&nbsp;&nbsp;</small>
                       </div>
@@ -69,7 +69,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/b">free web site creator</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
